videocall perfectly working

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </head>
   <body>
     <div class="video-container">
-      <video class="primary-video" autoplay muted id="remoteVideo"></video>
+      <video class="primary-video" autoplay  id="remoteVideo"></video>
       <video class="secondary-video" autoplay muted id="webcamVideo"></video>
       <div class="button-container">
        
